# Yuxii

./: Cargo.toml  README.md
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/mod_auto_import/: Cargo.toml
crates/necs_macro/: Cargo.toml
crates/neecs/: Cargo.toml
crates/neecs_derive/: Cargo.toml
crates/renderer/src/: core.rs  lib.rs
crates/yuxii_bevy_renderer/: Cargo.toml
crates/yuxii_bevy_renderer/src/: lib.rs
crates/yuxii_default_plugins/: Cargo.toml
src/: bundle.rs  default_res.rs  entity.rs  lib.rs  name.rs  node.rs  query.rs  scene.rs  static_scene.rs  table.rs  world.rs  yuxii.rs
