[package]
name = "yuxii"
version = "0.0.1"
edition = "2021"
author = "gaast"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ggaast/Yuxii"
repository = "https://github.com/ggaast/Yuxii"
keywords = ["games", "engine", "3d", "ecs"]
description = "ECS-based 3D game engine"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = ["crates/*"]

[dependencies]
neecs_derive = {path = "crates/neecs_derive", version = "0.1.0"}
neecs = {path = "crates/neecs", version = "0.1.0"}
#yuxii = {path = "crates/yuxii"}
static_init = "1.0.3"
idalloc = "0.1.1"
indexmap = "1.9.2"
go-spawn = "0.1.2"
easy_collections = "0.3.2"
rand = "0.8.5"
hashbrown = "0.13.2"
ron = "0.8.0"
serde = "1.0.152"
erased-serde = "0.3"
colored = "2.0.0"
typetag = "0.2.5"
relative-path = "1.7.3"
async-trait = "0.1.64"
tokio = "1.25.0"
bevy_reflect = "0.9.1"

